Fix padding on mobile

--- a/src/components/Layout/Container/index.module.scss
+++ b/src/components/Layout/Container/index.module.scss
@@ -55,6 +55,10 @@ a {
   position: relative;
   overflow: visible;
 
+  @media (max-width: $small-device-width) {
+    padding: 0 0.5rem;
+  }
+
   .left {
     position: absolute;
     top: 0;
